--- a/financials/templates/financial_transaction/list.html
+++ b/financials/templates/financial_transaction/list.html
@@ -88,11 +88,48 @@
             </div>
         </form>
     </div>
+</div>
 
+<div class="card-smart">
+    
+    <div class="">
+        <p class="m-0 fw-bold">
+            Página {{ page_obj.number }} de {{ page_obj.paginator.num_pages }}.
+        </p>
+    
+        <nav aria-label="" class="m-0 p-0">
+            <ul class="pagination">
+                {% if page_obj.has_previous %}
+                <li class="page-item">
+                    <a class="page-link" href="{% querystring page=1 %}">&laquo; Início</a>
+                </li>
+                <li class="page-item">
+                    <a class="page-link" href="{% querystring page=page_obj.previous_page_number %}">
+                        Anterior
+                    </a>
+                </li>
+                {% endif %}
+
+                {% if page_obj.has_next %}
+                <li class="page-item">
+                    <a class="page-link" href="{% querystring page=page_obj.next_page_number %}">
+                        Próxima
+                    </a>
+                </li>
+                <li class="page-item">
+                    <a class="page-link" href="{% querystring page=page_obj.paginator.num_pages %}">
+                        Fim &raquo;
+                    </a>
+                </li>
+                {% endif %}
+
+            </ul>
+        </nav>
+    </div>
 
     <!-- TABLE -->
     <div class="table-responsive">
-        <table class="table table-hover table-bordered text-center my-3 align-middle">
+        <table class="table table-hover table-bordered text-center align-middle">
             <thead>
                 <tr>
                     <th scope="col">
