--- a/financials/templates/financial_movement/list.html
+++ b/financials/templates/financial_movement/list.html
@@ -2,13 +2,66 @@
 
 {% block content %}
 
-
-<div class="mt-3">
-
-    {% for movement in financialmovement_list %}
-    {{movement}}
-    {% endfor %}
-
+<div class="m-3">
+    <h2 class="m-0 fw-bolder fs-3">
+        Movimentações
+    </h2>
+    <p class="m-0">
+        Filtre e visualize as movimentações e saldos.
+    </p>
 </div>
 
+<div class="card-smart">
+
+    <!-- TABLE -->
+    <div class="table-responsive">
+        <table class="table table-hover table-bordered text-center align-middle">
+            <thead>
+                <tr>
+                    <th scope="col">ID</th>
+                    <th scope="col">Cliente / Fornecedor</th>
+                    <th scope="col">Categoria</th>
+                    <th scope="col">Valor</th>
+                    <th scope="col">Saldo</th>
+                    <th scope="col">Ordem</th>
+                    <th scope="col"></th>
+                </tr>
+            </thead>
+            <tbody>
+                <!-- installment -->
+
+                {% for movement in financialmovement_list %}
+                <tr>
+                    <td>{{movement.id}}</td>
+                    <td>{{movement.financial_transaction_installment.financial_transaction.customer_supplier.name}}</td>
+                    <td>{{movement.financial_transaction_installment.financial_transaction.financial_category.name}}</td>
+                    <td class="{%if movement.financial_transaction_installment.financial_transaction.type == 0%}text-danger{%else%}text-success{%endif%} fw-bold">
+                        {%if movement.financial_transaction_installment.financial_transaction.type == 0%}
+                        -
+                        {%else%}
+                        +
+                        {%endif%}
+                        R$ {{movement.amount}}
+                    </td>
+                    <td>
+                        R$ {{movement.amount}}
+                    </td>
+                    <td>
+                        0
+                    </td>
+                    <td>
+                        0
+                    </td>
+                </tr>
+
+                {%endfor%}
+                <!-- END installment -->
+
+            </tbody>
+        </table>
+
+    </div>
+
+    <!-- END TABLE -->
+</div>
 {% endblock %}
