feat(Checking Account): list

--- a/financials/templates/account_holder/list.html
+++ b/financials/templates/account_holder/list.html
@@ -53,7 +53,7 @@
                         R$ 0
                     </td>
                     <td class="d-flex">
-                        <a href="" class="btn btn-smart me-2">
+                        <a href="{% url 'checking_account_list' account_holder.id %}" class="btn btn-smart me-2">
                             Contas Corrente
                         </a>
                         <a href="" class="btn btn-light">
