refactor: layout list CheckingAccount

--- a/financials/templates/checking_account/form.html
+++ b/financials/templates/checking_account/form.html
@@ -19,7 +19,7 @@
             <span class="material-symbols-outlined me-1">
                 info
             </span>
-            <p class="m-0">
+            <p class="m-0 fs-7">
                 O campo <span class="fw-bold">'Saldo inicial'</span> refere-se ao saldo atual da sua conta, ele serve
                 para que os valores do saldo aqui controlado e do banco esteja em conformidade.
             </p>
