--- a/financials/templates/checking_account/list.html
+++ b/financials/templates/checking_account/list.html
@@ -6,14 +6,14 @@
 <div class="d-lg-flex justify-content-between m-3">
     <div class="">
         <h2 class="m-0 fw-bolder fs-3">
-            Contas corrente
+            {{account_holder.customer_supplier.name}}
         </h2>
         <p class="m-0">
             Visualize e cadastre contas corrente do titular.
         </p>
     </div>
     <div class="d-flex align-items-center">
-        <a href="{% url 'checking_account_create' account_holder_id %}" class="btn-smart mx-3 icon-link d-flex justify-content-center">
+        <a href="{% url 'checking_account_create' account_holder.id %}" class="btn-smart icon-link d-flex justify-content-center">
             <span class="material-symbols-outlined fill-icon">
                 add_circle
             </span>
@@ -27,7 +27,7 @@
 
     {% for checking_account in checkingaccount_list %}
     <div class="card p-3 mb-3">
-        <div class="d-flex justify-content-between">
+        <div class="d-flex justify-content-between align-items-center">
             <div>
                 <p class="m-0 text-secondary">
                     #{{checking_account.id}}
@@ -41,12 +41,12 @@
                     Saldo atual
                 </p>
                 <p class="m-0 fw-semibold fs-5">
-                    R 0
+                    R$ 0
                 </p>
             </div>
         </div>
-        <div class="row g-3 mb-3">
-            <div class="col">
+        <div class="row m-2 bg-light rounded p-1">
+            <div class="col-sm-4">
                 <p class="text-secondary m-0">
                     Banco
                 </p>
@@ -54,7 +54,7 @@
                     {{checking_account.bank}}
                 </p>
             </div>
-            <div class="col">
+            <div class="col-sm-4">
                 <p class="text-secondary m-0">
                     Agência
                 </p>
@@ -62,7 +62,7 @@
                     {{checking_account.agency}}
                 </p>
             </div>
-            <div class="col">
+            <div class="col-sm-4">
                 <p class="text-secondary m-0">
                     Número Conta
                 </p>
@@ -71,25 +71,25 @@
                 </p>
             </div>
         </div>
-        <div class="row g-3">
-            <div class="col-sm-4">
-                <a href="" class="btn-smart icon-link">
+        <div class="d-lg-flex">
+            <div class="m-2">
+                <a href="" class="btn-smart icon-link justify-content-center w-100">
                     <span class="material-symbols-outlined me-1">
                         monitoring
                     </span>
-                    Acompanhar saldo
+                    Saldo
                 </a>
             </div>
-            <div class="col-sm-4">
-                <a href="" class="">
+            <div class="m-2">
+                <a href="" class="btn btn-light icon-link justify-content-center w-100">
                     <span class="material-symbols-outlined me-1">
                         edit
                     </span>
                     Editar
                 </a>
             </div>
-            <div class="col-sm-4">
-                <a href="">
+            <div class="m-2">
+                <a href="" class="btn btn-danger icon-link justify-content-center w-100">
                     <span class="material-symbols-outlined">
                         delete
                     </span>
