feat: CheckingAccountBalanceView and display currente balace
- Implement class CheckingAccountBalanceView to balance management, create or update balance

- Use annotate with Subquery to display the current balance on checking account list

--- a/financials/templates/checking_account/list.html
+++ b/financials/templates/checking_account/list.html
@@ -38,10 +38,10 @@
             </div>
             <div>
                 <p class="m-0 text-secondary">
-                    Saldo atual
+                    Saldo atual 
                 </p>
                 <p class="m-0 fw-semibold fs-5">
-                    R$ 0
+                    R$ {{checking_account.balance|default:0}}
                 </p>
             </div>
         </div>
