fix: uninstall django-money and fix Decimal fields
- uninstall django-money, not necessary

- use DecimalFields to amount fields.

- fix and improve localize and validators in DecimalFields

--- a/financials/templates/checking_account/list.html
+++ b/financials/templates/checking_account/list.html
@@ -41,7 +41,7 @@
                     Saldo atual 
                 </p>
                 <p class="m-0 fw-semibold fs-5">
-                    R$ {{checking_account.balance|default:0}}
+                    {{checking_account.balance|default:checking_account.initial_balance}}
                 </p>
             </div>
         </div>
