--- a/financials/templates/account_holder/list.html
+++ b/financials/templates/account_holder/list.html
@@ -13,8 +13,7 @@
         </p>
     </div>
     <div class="d-flex align-items-center">
-        <a href="{% url 'account_holder_create' %}"
-            class="btn-smart mx-3 icon-link d-flex justify-content-center">
+        <a href="{% url 'account_holder_create' %}" class="btn-smart mx-3 icon-link d-flex justify-content-center">
             <span class="material-symbols-outlined fill-icon">
                 add_circle
             </span>
@@ -25,50 +24,112 @@
 <!-- FIM HEADER -->
 
 <div class="card-smart">
-    <div class="table-responsive">
-        <table class="table table-hover table-bordered text-center align-middle">
-            <thead>
-                <tr>
-                    <th scope="col">ID</th>
-                    <th scope="col">Nome / Razão Social</th>
-                    <th scope="col">Qtd. Contas Corrente</th>
-                    <th scope="col">Saldo total das Contas</th>
-                    <th scope="col">Ações</th>
-    
-                </tr>
-            </thead>
-            <tbody>
-                {% for account_holder in accountholder_list %}
-                <tr>
-                    <td>
-                        {{account_holder.id}}
-                    </td>
-                    <td>
-                        {{account_holder.customer_supplier.name}}
-                    </td>
-                    <td>
-                        {{account_holder.checking_accounts.count}}
-                    </td>
-                    <td>
-                        R$ 0
-                    </td>
-                    <td class="d-flex">
-                        <a href="{% url 'checking_account_list' account_holder.id %}" class="btn btn-smart me-2">
-                            Contas Corrente
+
+    {% for account_holder in accountholder_list %}
+    <div class="card mb-3">
+        <div class="border-bottom p-3 d-flex align-items-center justify-content-between">
+            <p class="m-0 fs-7 text-secondary me-3">
+                #{{account_holder.id}}
+            </p>
+            <div>
+                <p class="m-0 fs-5 fw-bold text-black">
+                    {{account_holder.customer_supplier.name}}
+                </p>
+                <p class="m-0 text-secondary">
+                    {{account_holder.customer_supplier.cpf}}{{account_holder.customer_supplier.cnpj}}
+                </p>
+            </div>
+            <a href="{% url 'checking_account_create' account_holder.id %}" class="btn btn-light icon-link d-flex justify-content-center">
+                <span class="material-symbols-outlined fill-icon">
+                    add_circle
+                </span>
+                Nova conta
+            </a>
+        </div>
+        <div class="p-3 bg-light">
+
+            {% if account_holder.checking_accounts.all %}
+
+            {% for checking_account in account_holder.checking_accounts.all %}
+            <div class="border p-3 rounded bg-white">
+                <div class="d-flex justify-content-between align-items-center">
+                    <div class="">
+                        <p class="fw-bold m-0 fs-5">
+                            {{checking_account.name}}
+                            <span class="m-0 text-secondary fs-7 me-2">
+                                #{{checking_account.id}}
+                            </span>
+                        </p>
+                    </div>
+                    <div>
+                        <p class="m-0 text-secondary">
+                            Saldo
+                        </p>
+                        <p class="m-0 fw-semibold fs-5">
+                            {{checking_account.balance|default:checking_account.initial_balance}}
+                        </p>
+                    </div>
+                </div>
+                <div class="row m-2 bg-light rounded p-1">
+                    <div class="col-sm-4">
+                        <p class="text-secondary m-0">
+                            Banco
+                        </p>
+                        <p class="m-0">
+                            {{checking_account.bank}}
+                        </p>
+                    </div>
+                    <div class="col-sm-4">
+                        <p class="text-secondary m-0">
+                            Agência
+                        </p>
+                        <p class="m-0">
+                            {{checking_account.agency}}
+                        </p>
+                    </div>
+                    <div class="col-sm-4">
+                        <p class="text-secondary m-0">
+                            Número Conta
+                        </p>
+                        <p class="m-0">
+                            {{checking_account.account_number}}
+                        </p>
+                    </div>
+                </div>
+                <div class="d-lg-flex">
+                    <div class="m-2">
+                        <a href="" class="btn border icon-link justify-content-center w-100">
+                            <span class="material-symbols-outlined me-1">
+                                monitoring
+                            </span>
+                            Saldo
                         </a>
-                        <a href="" class="btn btn-light">
+                    </div>
+                    <div class="m-2">
+                        <a href="" class="btn border icon-link justify-content-center w-100">
+                            <span class="material-symbols-outlined me-1">
+                                edit
+                            </span>
                             Editar
                         </a>
-                    </td>
-                </tr>
-    
-                {%endfor%}
-            </tbody>
-        </table>
-    
+                    </div>
+
+                </div>
+            </div>
+            {%endfor%}
+
+            {% else %}
+
+            <p class="m-0 text-black text-center">
+                Sem contas cadastradas
+            </p>
+
+            {% endif %}
+
+        </div>
     </div>
+    {%endfor%}
+
 </div>
-
-
 
 {%endblock%}
