--- a/financials/templates/financial_movement/list.html
+++ b/financials/templates/financial_movement/list.html
@@ -97,7 +97,7 @@
         <div class="card-smart mx-0">
             <div class="icon-link">
                 <span class="material-symbols-outlined bg-light p-2 rounded fs-3 text-smart">
-                    date_range
+                    account_balance
                 </span>
                 <div class="ml-3">
                     <p class="m-0 fw-semibold">
