--- a/financials/templates/financial_transaction/settlement_form.html
+++ b/financials/templates/financial_transaction/settlement_form.html
@@ -51,7 +51,13 @@
                                 A pagar
                             </p>
                             {% else %}
-                            A receber
+                            <p class="m-0 icon-link bg-success-subtle p-2 rounded-4">
+                                <span class="material-symbols-outlined me-1 text-success">
+                                    call_made
+                                </span>
+                                A receber
+                            </p>
+                            
                             {% endif %}
                         </td>
                         <td>
