--- a/financials/templates/financial_transaction/list.html
+++ b/financials/templates/financial_transaction/list.html
@@ -55,7 +55,7 @@
                         <span class="material-symbols-outlined me-2 fw-light text-smart fill-icon">
                             delete
                         </span>
-                        Estornar parcela
+                        Excluir parcela
                     </a>
                 </li>
             </ul>
