feat(CheckingAccount) update

--- a/financials/templates/checking_account/form.html
+++ b/financials/templates/checking_account/form.html
@@ -8,7 +8,7 @@
         Contas corrente
     </h2>
     <p class="m-0">
-        Criar nova.
+        Formulário
     </p>
 </div>
 <!-- FIM HEADER -->
